# agentsystem

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml
design-system/: MASTER.md
docs/: README.md  architecture.md  capability-configuration.md  collaboration-rules.md  development-plan.md  model-provider-configuration.md  product-requirements.md  prompt.md  refactor-diagnostic.md  refactor-implementation-report.md  refactor-target-design.md  ux-ui-design.md
evals/: cases.jsonl  run_local.py
evals/results/: latest.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/api/: index.js
frontend/api/lib/: auth-db.js  data-store.js  kv.js  (+3 more)
frontend/public/: github-callback.html
frontend/src/: App.tsx  i18n.ts  main.tsx  types.ts  vite-env.d.ts
migrations/: env.py
migrations/versions/: 0001_local_mvp.py  0002_identity_rbac.py  0003_capability_registry.py
scripts/: bootstrap.sh  check.sh  dev.sh  serverless-dev.mjs  start.sh  sync_cloud_data.py
src/agentsystem/: __init__.py  agents.py  api.py  api_v1.py  auth.py  capabilities.py  collaboration.py  config.py  container.py  credentials.py  domain.py  github_adapter.py  main.py  model_gateway.py  persistence.py  policy.py  providers.py  store.py  tools.py  tracing.py  ui.py  worker.py  workflow.py  workspace.py
tests/: test_api.py  test_auth.py  test_capabilities.py  test_collaboration.py  test_model_gateway.py  test_persistence.py  test_policy.py  test_queries.py  test_workflow.py
(+49 files in other folders)
