[project]
name = "agentsystem"
version = "0.1.0"
description = "Private multi-agent code collaboration platform MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "openai>=2.0.0,<3.0.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.1",
  "keyring>=25.5.0",
  "mcp>=1.20.0,<2.0.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
openai = [
  "openai-agents>=0.2.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
]

[project.scripts]
agentsystem = "agentsystem.main:main"

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
